<resources>
    <string name="app_name">BApps</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cosplay_akatsuki_naruto_geek">#cosplay #akatsuki #naruto #geek</string>
    <string name="invalid_email_error">Invalid email address</string>
    <string name="invalid_password_error">Password must be at least 8 characters</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="toggle_password_visibility_off">Toggle password visibility</string>
    <string name="name">lullydark</string>
    <string name="date">1 sec ago</string>
    <string name="logo">Logo</string>
    <string name="image_profile">image profile</string>
    <string name="image_post">Image post</string>
    <string name="icon_like">Icon Like</string>
    <string name="icon_comment">Icon Comment</string>
    <string name="icon_share">Icon Share</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notifictaion">Notification</string>
    <string name="bpost">Post</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="english_us">English (US)</string>
    <string name="Logo">Logo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="company_logo">Company Logo</string>
    <string name="usernames">Name</string>
    <string name="invalid_name_error">name must not blank</string>
    <string name="register">Sign Up</string>
    <string name="have_an_account_login">have an account? Login</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="profile_image">Profile Image</string>
    <string name="back">Back</string>
    <string name="more_options">More Option</string>
    <string name="add_image">Add Image</string>
    <string name="add_gif">Add Gif</string>
    <string name="add_poll">Add Poll</string>
    <string name="add_location">Add Location</string>
    <string name="more_actions">More Action</string>
    <string name="your_followers_can_reply_amp_quote"><![CDATA[Your followers can reply & quote]]></string>
    <string name="post">Post</string>
    <string name="new_thread">New thread</string>
    <string name="raiiardiann">raiiardiann</string>
    <string name="what_s_new">What\'s new?</string>
    <string name="whats_new">What\'s new?</string>
    <string name="preview_image">Preview Image</string>
    <string name="add_camera">Add Camera</string>
    <string name="download_image">Download Image</string>
    <string name="download">Download</string>
    <string name="_700">700</string>
    <string name="_500">500</string>
    <string name="following">Following</string>
    <string name="followers">followers</string>
    <string name="username" />
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="bio">Bio</string>
    <string name="tab_stories">bstories</string>
    <string name="bacot">Bacot</string>
    <string name="apperance">Apperance</string>
    <string name="drk_light"><![CDATA[Dark & Light]]></string>
    <string name="logout">Logout</string>
    <string name="design">Design</string>
    <string name="button_maps">Button Maps</string>
    <string name="back_button">Back Button</string>
    <string name="your_current_location">Post location</string>
    <string name="location">JL. Senayan</string>
    <string name="image_detail_desc">Image Detail</string>
    <string name="close_button_desc">Button Backs</string>
    <string name="more_button">More Button</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
</resources>