<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- Close Button -->
    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close_button_desc"
        android:src="@drawable/ic_close"
        app:tint="@android:color/white" />

    <!-- More Vert Button -->
    <ImageButton
        android:id="@+id/btnMore"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/more_button"
        android:src="@drawable/ic_more"
        app:tint="@android:color/white" />

    <!-- Main Image -->
    <ImageView
        android:id="@+id/imgMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image_detail_desc"
        android:scaleType="fitCenter"
        tools:src="@tools:sample/avatars" />

</RelativeLayout>
