<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.Material3.DayNight"
                app:title="New Thread">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_back"
                    android:contentDescription="@string/back"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="8dp" />

                <ImageView
                    android:id="@+id/ivMoreOptions"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_more_options"
                    android:contentDescription="@string/more_options"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp" />

            </androidx.appcompat.widget.Toolbar>
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_thread"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="8dp" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/image_profile"
                android:layout_marginEnd="8dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/white"
                tools:src="@tools:sample/avatars"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile"
                app:layout_constraintBottom_toBottomOf="@id/profile" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:text="@string/date"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/profile"
                app:layout_constraintStart_toEndOf="@id/profile"
                app:layout_constraintTop_toTopOf="@id/profile"
                app:layout_constraintVertical_bias="0.571" />

            <TextView
                android:id="@+id/postContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cosplay_akatsuki_naruto_geek"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/profile"
                app:layout_constraintStart_toStartOf="@id/profile"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:layout_constraintDimensionRatio="3:4"
                app:layout_constraintTop_toBottomOf="@id/postContent"
                app:layout_constraintStart_toStartOf="@id/postContent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/ImageB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_post"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/cardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/iconLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/location"
                app:layout_constraintStart_toStartOf="@id/cardView"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/icLike"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon_like"
                    android:src="@drawable/ic_like"
                    android:layout_marginEnd="16dp" />

                <ImageView
                    android:id="@+id/icComment"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon_comment"
                    android:src="@drawable/ic_comment"
                    android:layout_marginEnd="16dp" />

                <ImageView
                    android:id="@+id/icShare"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon_share"
                    android:src="@drawable/ic_share" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/iconLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
